# catalyst

./: .dep-versions  setup.py
doc/: changelog.md
frontend/catalyst/: __init__.py  _version.py  compilation_pipelines.py  compiled_functions.py  compiler.py  jax_tape.py  jax_tracer.py  jit.py  pennylane_extensions.py  preprocess.py  qjit_device.py
frontend/catalyst/api_extensions/: quantum_operators.py
frontend/catalyst/jax_extras/: lowering.py  tracing.py
frontend/catalyst/tracing/: contexts.py  type_signatures.py
frontend/catalyst/utils/: jax_extras.py  runtime.py  wrapper.cpp
frontend/test/pytest/: test_autograph.py  test_compiler.py
mlir/include/: CMakeLists.txt
mlir/lib/: CMakeLists.txt
mlir/lib/Driver/: CompilerDriver.cpp
mlir/lib/Gradient/Transforms/: ConversionPatterns.cpp
mlir/lib/Gradient/Transforms/GradMethods/: ClassicalJacobian.cpp
mlir/tools/quantum-opt/: CMakeLists.txt  quantum-opt.cpp
runtime/: CMakeLists.txt  Makefile
runtime/include/: QuantumDevice.hpp
runtime/lib/backend/: CMakeLists.txt
runtime/lib/capi/: CMakeLists.txt
runtime/tests/: CMakeLists.txt
